--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  @font-face {
   font-family: 'acidic';
-         src:url('fonts/acidic.ttf') format('truetype');
+         src:url('fonts/Acidic.TTF') format('truetype');
    font-weight: 800;
     font-style: normal;
 }
